<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main menu -->
    <string name="app_name">GoMueller</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="enter_data">Enter Exercise</string>
    <string name="view_data">View Exercise Detail</string>
    <string name="viewWeightHistory">Check Weight History</string>
    <string name="welcome_message">Welcome to GoMueller!</string>
    <string name="title_activity_new_exercise">New Exercise</string>
    <string name="action_settings">Settings</string>

    <!-- Add exercise menu -->
    <string name="ask_record">Please enter relevant exercise information</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="date">Date</string>
    <string name="weightUnit">lbs</string>
    <string name="hintNotes">Write some notes (optional)</string>
    <string name="ok">OK</string>

    <!-- Add weight -->
    <string name="title_activity_new_weight">New Weight</string>
    <string name="ask_weight">Please enter your weight at the specified date</string>
    <string name="add">Add</string>
    <string name="enter_weight">Enter Your Weight</string>
    <string name="addWeightButton">Record Your Weight</string>

    <!-- View Weight Graph -->
    <string name="title_activity_graph">Your Weight History</string>
    <string name="title_activity_graph_weight">Weight Record</string>
    <string name="modifyWeightHistory">Edit Weight History</string>

    <!-- View exercise/weight history menu -->
    <string name="exerciseListHeader">Your Exercise History</string>
    <string name="title_activity_track_exercise">Exercise Record</string>
    <string name="click_item">Show click item here</string>
    <string name="title_activity_exercise_detail">Detail</string>
    <string name="txtEmpty">List is empty</string>
    <string name="lblBtnDel">Delete Selected Items</string>
    <string name="addExerciseStr">Add Exercise</string>

    <!-- Settings menu -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_units_label">Units</string>
    <string name="pref_units_default">Metric</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>

    <!-- About section -->
    <string name="pref_username_label">Name</string>
    <string name="pref_username_key">name</string>
    <string name="title_activity_about">About</string>
    <string name="About">GoMueller is an open source application developed by RCOS.</string>
    <string name="app_version">Version: 0.0.1</string>
    <string name="menu_about">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="openingHours">Sunday: 9:00 am-12:00 am \nMonday - Thursday: 7:00 am-12:00 am \nFriday: 7:00 am-9:00 pm \nSaturday: 9:00 am-7:00 pm</string>
    <string name="title_activity_mueller">Mueller Center</string>
    <string name="mueller_info">The Mueller Center is at the heart of recreation and wellness at Rensselaer.
        The RPI community is encouraged to visit the Mueller Center to sign up for fitness classes and intramural sport leagues,
        work using equipment on the Cardio Floor or in the Weight Room. Staffed with trained staff and students,
        the Mueller Center is a great place to break a sweat and increase your physical fitness.</string>
    <string name="mueller_hour_title">Opening Hours</string>


</resources>
