<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.rcos.gomueller.NewWeightActivity">

    <TextView android:text="@string/ask_weight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/askWeightTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/weight"
        android:id="@+id/weightTextView"
        android:layout_marginTop="130dp"
        android:layout_below="@+id/askWeightTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editWeight"
        android:layout_alignTop="@+id/weightTextView"
        android:layout_toLeftOf="@+id/AddWeightUnit"
        android:layout_toStartOf="@+id/AddWeightUnit" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editDate"
        android:layout_below="@+id/askWeightTextView"
        android:layout_marginTop="51dp"
        android:layout_toLeftOf="@+id/AddWeightUnit"
        android:layout_toStartOf="@+id/AddWeightUnit" />

    <Button android:layout_height="wrap_content"
        android:layout_weight="0" android:id="@+id/btnCalendar" android:text="Calendar"
        android:layout_width="100dp"
        android:layout_alignBottom="@+id/editDate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"></Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/weightUnit"
        android:id="@+id/AddWeightUnit"
        android:layout_above="@+id/addWeightOkButton"
        android:layout_alignLeft="@+id/btnCalendar"
        android:layout_alignStart="@+id/btnCalendar"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/addWeightOkButton"
        android:onClick="WeightOKButtonOnClick"
        android:layout_marginTop="114dp"
        android:layout_below="@+id/editWeight"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
