<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rcos.gomueller.NewExerciseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_record"
        android:id="@+id/askRecordTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/nameTextView"
        android:layout_below="@+id/askRecordTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />


    <EditText
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/nameEditText"
        android:layout_alignTop="@+id/nameTextView"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/weightEditText"
        android:inputType="number"
        android:layout_below="@+id/nameEditText"
        android:layout_alignStart="@+id/nameEditText"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/okButton"
        android:onClick="okButtonOnClick"
        android:layout_below="@+id/weightEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/weightUnit"
        android:id="@+id/WeightUnit"
        android:layout_toRightOf="@+id/weightEditText"
        android:layout_toEndOf="@+id/weightEditText"
        android:layout_alignBottom="@+id/weightEditText"
        android:layout_alignRight="@+id/nameEditText"
        android:layout_alignEnd="@+id/nameEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/dateEditText"
        android:layout_above="@+id/nameEditText"
        android:layout_toStartOf="@+id/nameEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calendar"
        android:id="@+id/btnCalendar"
        android:layout_alignBottom="@+id/dateEditText"
        android:layout_alignEnd="@+id/nameEditText" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/editWeightNameText"
        android:inputType="text"
        android:layout_alignTop="@+id/weightEditText"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/okButton" />

</RelativeLayout>
